--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Hydrocarbon Collective</a>
+                <a class="navbar-brand topnav" href="#"><span><img src="img/logoBlack_simple_transparent.png" style="height:100%;"/> Hydrocarbon Collective</span></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
