Added a link to Box Shop

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Who We Are</h2>
-                    <p class="lead">The Hydrocarbon Collective is a group of artists and engineers.  Operating out of the Box Shop in San Francisco, we seek to create art that is dangerous, difficult, and challenging.</p>
+                    <p class="lead">The Hydrocarbon Collective is a group of artists and engineers.  Operating out of the <a href="http://boxshopsf.org/">Box Shop</a> in San Francisco, we seek to create art that is dangerous, difficult, and challenging.</p>
                 </div>
                    <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/box_shop.jpg" alt="The Box Shop, SF">
