Fleshed out the Torch Song page with some videos and images, and some text

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading"><a href="torch_song.html">Torch Song</a></h2>
-                    <p class="lead"><a href="torch_song.html">Torch Song</a> is a kinetic fire art sculpture in the form of a double tetrahedron with nine edges. Each edge has an independently controlled flame that travels along the 8’ length. The effect is of a set of dancing flames that perform a synchronized ballet in response to music and inputs from observers.</p>
+                    <p class="lead"><a href="torch_song.html">Torch Song</a> is a kinetic fire art sculpture, currently under construction, in the form of a double tetrahedron. Each edge has an independently controlled flame that travels along the 8’ length. The effect is of a set of dancing flames that perform a synchronized ballet in response to music and inputs from observers.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <a href="torch_song.html"><img class="img-responsive" src="img/three_flame_animated.gif" alt="Torch Song Model"></a>
