Fixing the link

--- a/torch_song.html
+++ b/torch_song.html
@@ -151,13 +151,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3><a href="/torch3d">Help Us Write Songs</a></h3>
+                    <h3><a href="./torch3d">Help Us Write Songs</a></h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="col-lg-6 col-lg-offset-2"><p>
-                    Torch Song is a collaborative effort between our members and the Burning Man community, and we need your help.  Torch Song can play literally an infinte number of possibly programs (or "Songbooks"), controlling the speed, direction, and condition of each of its flames.  We invite you to visit our <a href="/torch3d">Torch Song Simulator</a> and help us write songbooks to use at Burning Man in 2017 and beyond.
+                    Torch Song is a collaborative effort between our members and the Burning Man community, and we need your help.  Torch Song can play literally an infinte number of possibly programs (or "Songbooks"), controlling the speed, direction, and condition of each of its flames.  We invite you to visit our <a href="./torch3d">Torch Song Simulator</a> and help us write songbooks to use at Burning Man in 2017 and beyond.
                     </p>
                     </div>
                 </div>
