Update torch song images '

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <p class="lead">The Hydrocarbon Collective is a group of artists and engineers.  Operating out of the <a href="http://boxshopsf.org/">Box Shop</a> in San Francisco, we seek to create art that is dangerous, difficult, and challenging.</p>
                 </div>
                    <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/box_shop.jpg" alt="The Box Shop, SF">
+                    <img class="img-responsive" src="img/hcc_team.jpg" alt="The Box Shop, SF">
                 </div>
             </div>
 
@@ -147,7 +147,7 @@
                     <p class="lead"><a href="torch_song.html">Torch Song</a> is a kinetic fire art sculpture, currently under construction, in the form of a double tetrahedron. Each edge has an independently controlled flame that travels along the 8’ length. The effect is of a set of dancing flames that perform a synchronized ballet in response to music and inputs from observers.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="torch_song.html"><img class="img-responsive" src="img/three_flame_animated.gif" alt="Torch Song Model"></a>
+                    <a href="torch_song.html"><img class="img-responsive" src="img/torch_song_bm2017_1.jpg" alt="Torch Song Model"></a>
                 </div>
             </div>
 
