Added youtube video

--- a/torch_song.html
+++ b/torch_song.html
@@ -84,7 +84,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/torch_song_portfolio/ico_proto.jpg" class="img-responsive" alt="">
+                        <img src="img/torch_song_portfolio/torch_song_vid_cover.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -235,7 +235,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>3D Animated Model</h2>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/4Nf6EaESeG8" frameborder="0" allowfullscreen></iframe><br>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/gbDI7ayh3Rc" frameborder="0" allowfullscreen></iframe><br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -256,8 +256,8 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Prototype Edge Unit</h2>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/9XEcr_LZGbc" frameborder="0" allowfullscreen></iframe><br>
-                            <p>The original prototype model of a single moving flame unit.  This will be one of the nine edges.</p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/gbDI7ayh3Rc" frameborder="0" allowfullscreen></iframe><br>
+                            <p>Torch Song at Burning Man 2017</p>
                             <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
