Added sunset photo

--- a/torch_song.html
+++ b/torch_song.html
@@ -74,7 +74,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/torch_song_portfolio/ico_with_fire.jpg" class="img-responsive" alt="">
+                        <img src="img/torch_song_portfolio/torch_song_sunset_thumb.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -234,8 +234,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>3D Animated Model</h2>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/gbDI7ayh3Rc" frameborder="0" allowfullscreen></iframe><br>
+                            <h2>Torch Song at Sunset: Burning Man 2017</h2>
+                            <img src="img/torch_song_portfolio/torch_song_sunset.jpg" class="img-responsive img-centered" alt="">
+                            <p>Torch Song at Burning Man 2017, Sunset</p>
+                            <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
