--- a/torch_song.html
+++ b/torch_song.html
@@ -94,7 +94,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/torch_song_portfolio/architectural_model.jpg" class="img-responsive" alt="">
+                        <img src="img/torch_song_portfolio/torch_song_night.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
 <!--                 <div class="col-sm-4 portfolio-item">
@@ -280,9 +280,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Architectural model of Torch Song</h2>
-                            <img src="img/torch_song_portfolio/architectural_model.jpg" class="img-responsive img-centered" alt="">
-                            <p>Wooden scale model showing the structural details of the support for Torch Song</p>
+                            <h2>Torch Song at Burning Man 2017</h2>
+                            <img src="img/torch_song_portfolio/torch_song_night.jpg" class="img-responsive img-centered" alt="">
+                            <p>Torch song at night, Burning Man 2017</p>
                             <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
