Add new banner design

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                     <img src="img/logoHBlue_large.png" style="width: 100%; position: relative; top: 30px">
                     <div class="intro-message">
 
-                        <h3>Because Art Should Be Dangerous</h3>
+                        <!-- h3>Because Art Should Be Dangerous</h3 -->
+                        <img src="img/hcc_dangerous_white.jpg">
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
