--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading"><a href="torch_song.html">Torch Song</a></h2>
-                    <p class="lead"><a href="torch_song.html">Torch Song</a> is a kinetic fire art sculpture, currently under construction, in the form of a double tetrahedron. Each edge has an independently controlled flame that travels along the 8’ length. The effect is of a set of dancing flames that perform a synchronized ballet in response to music and inputs from observers.</p>
+                    <p class="lead"><a href="torch_song.html">Torch Song</a> is a kinetic fire art sculpture that was displayed at Burning Man 2017. A double tetrahedron balanced on a corner, each edge has an independently controlled flame that travels along the 8’ length. The effect is of a set of dancing flames that perform a synchronized ballet.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <a href="torch_song.html"><img class="img-responsive" src="img/torch_song_bm2017_1.jpg" alt="Torch Song Model"></a>
