Added controller to Torch Song portfolio

--- a/torch_song.html
+++ b/torch_song.html
@@ -67,7 +67,7 @@
     <section id="portfolio">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -77,17 +77,7 @@
                         <img src="img/torch_song_portfolio/torch_song_sunset_thumb.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/torch_song_portfolio/torch_song_vid_cover.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -97,6 +87,29 @@
                         <img src="img/torch_song_portfolio/torch_song_night.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-2 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/torch_song_portfolio/torch_song_vid_cover.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-6 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/torch_song_portfolio/controller_thumb.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>                
+            </div>
 <!--                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -257,7 +270,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Prototype Edge Unit</h2>
+                            <h2>Video of Torch Song at Burning Man 2017</h2>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/gbDI7ayh3Rc" frameborder="0" allowfullscreen></iframe><br>
                             <p>Torch Song at Burning Man 2017</p>
                             <br>
@@ -290,6 +303,30 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Torch Song Interactive Controller</h2>
+                            <img src="img/torch_song_portfolio/controller.jpg" class="img-responsive img-centered" alt="">
+                            <p>Interactive controller for Torch Song, in the shape of an icosahedron.  The exterior is laser cut wood panels, bolted internally to 3D-printed brackets.  Inside the unit is an Arduino microcontroller with an integrated accelerometer, a transmitter, and a set of color-controlled LEDs.  When picked up and placed back on its pedestal, the controller transmits its orientation to the main control unit, which chooses the next program for the sculpture to run.</p>
+                            <br>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>    
 <!--     </div>
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
