Added some brachistochrone content

--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><a href="brachistochrone.html">Brachistochrone</a></h2>
-                    <p class="lead"><a href="torch_song.html">Torch Song</a> is a kinetic fire art sculpture that was displayed at Burning Man 2017. A double tetrahedron balanced on a corner, each edge has an independently controlled flame that travels along the 8’ length. The effect is of a set of dancing flames that perform a synchronized ballet.</p>
+                    <h2 class="section-heading">Brachistochrone</h2>
+                    <p class="lead"><b>Brachistochrone</b> is a new kinetic fire art piece currently in prototyping.  We're going to make a marble track.  A really big marble track.  And the marbles will be on fire.  Because, duh.  <a href="#contact">Want to help us build it?</a></p>
                 </div>
                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <a href="brachistochrone.html"><img class="img-responsive" src="img/torch_song_bm2017_1.jpg" alt="Torch Song Model"></a>
+                    <img class="img-responsive" src="img/brachistochrone_cover.jpg" alt="Brachistochrone"></a>
                 </div>
             </div>
 
