--- a/index.html
+++ b/index.html
@@ -90,19 +90,27 @@
             <div class="row">
                 <div class="col-lg-12">
                     <img src="img/logoHBlue_large.png" style="width: 100%; position: relative; top: 30px">
-                    <div class="intro-message">
+                    <div class="intro-message" style="background">
 
                         <!-- h3>Because Art Should Be Dangerous</h3 -->
-                        <img src="img/hcc_dangerous_white.jpg">
-                        <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-                            <li>
-                                <a href="https://www.instagram.com/hydrocarboncollective/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
-                            </li>
-                            <li>
-                                <a href="https://www.facebook.com/hydrocarboncollective" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
-                            </li>
-                        </ul>
+                        <div class="row">
+                            <div class="col-sm-4 col-sm-offset-4">
+                                <img src="img/hcc_dangerous_white.jpg" style="width: 100%; position: relative; top: 30px">
+                            </div>
+                        </div>
+                        <div class="row" style="position: relative; top: 30px">
+                            <div class="col-lg-12">
+                                <hr class="intro-divider">
+                                <ul class="list-inline intro-social-buttons">
+                                    <li>
+                                        <a href="https://www.instagram.com/hydrocarboncollective/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.facebook.com/hydrocarboncollective" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
