--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-12">
-                    <img src="img/logoHBlue_large.png" style="width: 100%; position: relative; top: 30px">
+                <div class="col-lg-12" style="position: relative; top: 30px">
+                    <img src="img/logoHBlue_large.png" style="width: 100%">
                     <div class="intro-message" style="background">
 
                         <!-- h3>Because Art Should Be Dangerous</h3 -->
                         <div class="row">
                             <div class="col-sm-4 col-sm-offset-4">
-                                <img src="img/hcc_dangerous_white.jpg" style="width: 100%; position: relative; top: 30px">
+                                <img src="img/hcc_dangerous_white.jpg" style="width: 100%">
                             </div>
                         </div>
-                        <div class="row" style="position: relative; top: 30px">
+                        <div class="row">
                             <div class="col-lg-12">
                                 <hr class="intro-divider">
                                 <ul class="list-inline intro-social-buttons">
