--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                         <a href="#art">Art</a>
                     </li>
                     <li>
+                        <a href="#media">Media</a>
+                    </li>
+
+                    <li>
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -129,7 +133,6 @@
 
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Who We Are</h2>
                     <p class="lead">The Hydrocarbon Collective is a group of artists and engineers.  Operating out of the <a href="http://boxshopsf.org/">Box Shop</a> in San Francisco, we seek to create art that is dangerous, difficult, and challenging.</p>
@@ -150,7 +153,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading"><a href="torch_song.html">Torch Song</a></h2>
                     <p class="lead"><a href="torch_song.html">Torch Song</a> is a kinetic fire art sculpture that was displayed at Burning Man 2017. A double tetrahedron balanced on a corner, each edge has an independently controlled flame that travels along the 8’ length. The effect is of a set of dancing flames that perform a synchronized ballet.</p>
@@ -170,7 +172,7 @@
         <div class="container">
             <div class="row">
                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
+
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Brachistochrone</h2>
                     <p class="lead"><b>Brachistochrone</b> is a new kinetic fire art piece currently in prototyping.  We're going to make a marble track.  A really big marble track.  And the marbles will be on fire.  Because, duh.  <a href="#contact">Want to help us build it?</a></p>
@@ -191,7 +193,7 @@
 
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
+
                     <div class="clearfix"></div>
                     <h2 class="section-heading"><a href="http://www.getsnapcamp.com">Snapcamp</a></h2>
                     <p class="lead">In 2016, the homelessness problem in San Francisco became increasingly visible, with tent camps popping up around the city. We created <a href="http://www.getsnapcamp.com">Snapcamp</a>, a fake app, website, and social media account, to draw attention to the misguided "hackathon" culture of relying on software to solve society's problems. Snapcamp also lampooned the clickbait media itself, by becoming an overnight but disposable hot button issue.</p>
@@ -214,6 +216,27 @@
     </div>
     <!-- /.content-section-b -->
 
+    <a  name="media"></a>
+        <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                    <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+
+                        <div class="clearfix"></div>
+                        <h2 class="section-heading">Media</h2>
+                    </div>
+            </div>
+            <div class="row">
+                <center>
+                        <iframe src="https://player.vimeo.com/video/254799391" width="640" height="298" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/254799391">Matt Gordon, Perfect is the Enemy of Good, Dorkbot-SF, 2018-01-31</a> from <a href="https://vimeo.com/pronoiac">pronoiac</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+</center>
+            </div>
+        
+        </div>
+    </div>
 
 	<a  name="contact"></a>
     <div class="banner">
