Added fire skeeball to main page

--- a/index.html
+++ b/index.html
@@ -174,11 +174,12 @@
                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
 
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Brachistochrone</h2>
-                    <p class="lead"><b>Brachistochrone</b> is a new kinetic fire art piece currently in prototyping.  We're going to make a marble track.  A really big marble track.  And the marbles will be on fire.  Because, duh.  <a href="#contact">Want to help us build it?</a></p>
+                    <div class="section-heading"><h2>Hot Hand Luke</h2>
+                    <i>aka Fire Skeeball</i></div>
+                    <p class="lead"><b>Hot Hand Luke</b> is an interactive fire sculpture, a twist on the game of Skeeball.  Except, the balls are on fire.  Because art should be dangerous.
                 </div>
                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/brachistochrone_cover.jpg" alt="Brachistochrone"></a>
+                    <img class="img-responsive" src="img/skeeball/skeeball_cover.jpg" alt="Brachistochrone"></a>
                 </div>
             </div>
 
@@ -225,6 +226,7 @@
                     <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
 
                         <div class="clearfix"></div>
+                        
                         <h2 class="section-heading">Media</h2>
                     </div>
             </div>
