--- a/skeeball.html
+++ b/skeeball.html
@@ -232,7 +232,8 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/j-tgbkbcsl0" frameborder="0" allowfullscreen></iframe><br>
+                            <iframe width="100%" height="500"
+src="https://www.youtube.com/embed/j-tgbkbcsl0?autoplay=1&controls=0&loop=1&playlist=j-tgbkbcsl0" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br>
                             <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
