--- a/index.html
+++ b/index.html
@@ -174,8 +174,9 @@
                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
 
                     <div class="clearfix"></div>
+                    <a href="skeeball.html">
                     <div class="section-heading"><h2>Hot Hand Luke</h2>
-                    <i>aka Fire Skeeball</i></div>
+                    <i>aka Fire Skeeball</i></div></a>
                     <p class="lead"><b>Hot Hand Luke</b> is an interactive fire sculpture, a twist on the game of Skeeball.  Except, the balls are on fire.  Because art should be dangerous.
                 </div>
                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
