--- a/skeeball.html
+++ b/skeeball.html
@@ -233,7 +233,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <iframe width="100%" height="500"
-src="https://www.youtube.com/embed/j-tgbkbcsl0?autoplay=1&controls=0&loop=1&playlist=j-tgbkbcsl0" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br>
+src="https://www.youtube.com/embed/j-tgbkbcsl0?autoplay=1&controls=0&loop=1&playlist=j-tgbkbcsl0&rel=0&mute=1" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br>
                             <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
