--- a/skeeball.html
+++ b/skeeball.html
@@ -58,7 +58,6 @@
                     <div class="intro-text">
                         <span class="name">Hot Hand Luke</span>
                         <h3>Fire Skeeball</h3>
-                        <h4>Fourth of Juplaya 2018</h4>
                     </div>
                 </div>
             </div>
@@ -78,10 +77,10 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/skeeball/skeeball1_thumb.jpg" class="img-responsive" alt="">
+                        <img src="img/skeeball/skeeball_mah_thumb.jpg" class="img-responsive" alt="">
                     </a>
                     </center>
-                </div>
+                </div>              
 
                 <div class="col-sm-6  portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
@@ -211,7 +210,9 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <img src="img/skeeball/skeeball1.jpg" class="img-responsive img-centered" alt="">
+                            <H2>Hot Hand Luke at the Santa Cruz Museum of Art and History</H2>
+                            <h3>GLOW 2018, Oct 21 2018</h3>
+                            <img src="img/skeeball/skeeball_mah.jpg" class="img-responsive img-centered" alt="">
                             <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
