Fix email address

--- a/drmattyg.html
+++ b/drmattyg.html
@@ -1,7 +1,7 @@
 <pre>
 Matthew P. Gordon, Ph.D.
 Twitter: <a href="http://twitter.com/drmattyg">@DrMattyG</a>
-e-mail: inverarity ⓐⓣ 🄶🄼🄰🄸🄻
+e-mail: inverarity at The Big Company That Owns All Your Data That Starts with G
 <a href="http://github.com/drmattyg">Github</a>
 <a href="https://www.linkedin.com/in/drmattyg/">LinkedIn</a>
 
