--- a/drmattyg.html
+++ b/drmattyg.html
@@ -5,7 +5,7 @@ e-mail: inverarity at The Big Company That Owns All Your Data That Starts with G
 <a href="http://github.com/drmattyg">Github</a>
 <a href="https://www.linkedin.com/in/drmattyg/">LinkedIn</a>
 
-Jobby Job: Senior Software Engineer at <a href="http://kairosaerospace.com">Kairos Aerospace</a>
+Jobby Job: Senior Software Engineer and Director of Climate Initiatives at <a href="http://kairosaerospace.com">Kairos Aerospace</a>
 Unpaid Fake Job: Founder and Lead Architect at <a href="http://www.hydrocarboncollective.org">Hydrocarbon Collective</a>
                  <a href="https://www.instagram.com/hydrocarboncollective/">Hydrocarbon Collective Instagram</a>
 
@@ -20,8 +20,8 @@ Patents:
 
 
 Talks:
-    <a href="https://vimeo.com/254799391">Perfect is the Enemy of Good, Dorkbot SF 2018-01-31</a>
-
+    - <a href="https://www.youtube.com/watch?v=WQkM3ppuhWo">Fighting Climate Change with Python, PyCon 2019</a>
+    - <a href="https://vimeo.com/254799391">Perfect is the Enemy of Good, Dorkbot SF 2018-01-31</a>
 Education:
 	Princeton, A.B. Physics, 1998
 	University of Illinois, Ph.D. Physics, 2006
