Update age automagically

--- a/howoldisfaith/index.html
+++ b/howoldisfaith/index.html
@@ -1,4 +1,5 @@
 <head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <title>How Old Is Faith</title>
 </head>
 <style type="text/css">
@@ -17,5 +18,13 @@ div {
 
 </style>
 <body>
-	<div>35</div>
+	<div id="faithAge">0</div>
 </body>
+<script>
+$(document).ready(function(){
+ 	var diff = ((new Date()) - (new Date("12/9/1983")));
+ 	var ad = new Date(diff);
+ 	var years = Math.abs(ad.getUTCFullYear()) - 1970;
+ 	$("#faithAge").text(years) 
+});
+</script>
