--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Who We Are</h2>
-                    <p class="lead">The Hydrocarbon Collective is a group of artists and engineers.  Operating out of the <a href="http://boxshopsf.org/">Box Shop</a> in San Francisco, we seek to create art that is dangerous, difficult, and challenging.</p>
+                    <p class="lead">The Hydrocarbon Collective is a group of artists and engineers.  Operating out of the Berkeley Institute for Transchaotic Studies, we seek to create art that is dangerous, difficult, and challenging.</p>
                 </div>
                    <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/hcc_team.jpg" alt="The Box Shop, SF">
@@ -219,10 +219,9 @@
     <!-- /.content-section-b -->
 
     <a  name="media"></a>
-        <div class="content-section-a">
 
+        <div class="content-section-b">
             <div class="container">
-
                 <div class="row">
                         <div class="col-lg-5 col-lg-offset-1">
 
@@ -231,6 +230,40 @@
                             <h2 class="section-heading">Media</h2>
                         </div>
                 </div>
+
+            <div class="row">
+
+                <div class="clearfix">
+                    <center>
+                <h4><i><a href="https://www.flipsnack.com/bwmag/beyond-words-magazine-issue-2-april-2020.html">Beyond Words, Issue 2, April 2020</a></i></h4>
+                </center>
+                <div class="col-sm-4 col-sm-offset-2">
+                    <a href="https://www.flipsnack.com/bwmag/beyond-words-magazine-issue-2-april-2020.html"><img src="img/beyond words cover.png"></a>
+                </div>
+                <div>
+                    <h3>Maybe Rome had it coming</h3><p>
+                    <i>Matthew P. Gordon</i><p>
+<p style="font-size:18px">
+    Maybe Rome had it coming<br>
+    Maybe Nero figured there wasn't anything left he could do to help.<br>
+Maybe he loved playing the fiddle<br>
+And feared this might be his last chance<br>
+Maybe Rome had it coming<br>
+And Nero<br>
+Bursting with love for mankind<br>
+Wanted to leave the world with a song<br>
+And not a sigh</p>
+
+                </div>
+
+            </div>
+        
+        </div>
+    </div>    
+        <div class="content-section-a">
+
+            <div class="container">
+
                 <div class="row">
                     <div class="col-sm-4 col-sm-offset-2">
 
