--- a/index.html
+++ b/index.html
@@ -149,6 +149,24 @@
 
     <!-- /.content-section-a -->
 	<a  name="art"></a>
+    <div class="content-section-a">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <div class="clearfix"></div>
+                    <p class="lead"><iframe width="560" height="315" src="https://www.youtube.com/embed/eYutKYTUJac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <h2 class="section-heading">Switch Tree, For Lost Friends</h2>
+                    <p class="lead">2020 is a bad year for art.  2020 is an amazing year for art.  2020 is a year in which we have lost so many friends, to death, to racism, to brutality, to privilege, to mental illness, to self injury.  This piece has nothing to do with any of that, and it also has everything to do with it, because I made it to distract me from those things.  I have the privilege of being able to distract myself from those things.  Most people do not.  My failure to rise to the moment is not an excuse, it is simply a fact.  Presenting art to the world in 2020 is self-absorbed, and presenting art to the world in 2020 is an act of deepest vulnerability.  Fuck you, 2020.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>    
     <div class="content-section-b">
         <div class="container">
             <div class="row">
