Fix video responsive

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <div class="clearfix"></div>
-                    <p class="lead"><iframe width="560" height="315" src="https://www.youtube.com/embed/eYutKYTUJac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                    <div class="embed-responsive video"></div>
+                    <p class="lead"><iframe width="100%" height="315" src="https://www.youtube.com/embed/eYutKYTUJac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <h2 class="section-heading">Switch Tree, For Lost Friends</h2>
